--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "@types/leaflet.locatecontrol": "^0.74.2",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1"
+    "eslint-plugin-prettier": "^4.2.1",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "@types/geojson": "^7946.0.11",
+    "@types/leaflet": "^1.9.6",
+    "leaflet": "^1.9.4",
+    "leaflet.locatecontrol": "^0.79.0"
   }
 }
