--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-pwa": "^0.16.5"
   },
   "dependencies": {
     "@types/geojson": "^7946.0.11",
